Fixed formatting of consumer landing page

--- a/home.html
+++ b/home.html
@@ -61,8 +61,8 @@
                                 </ul>
                             </div>
                             <div class="serve_brands">
-                                <img class="serve_images" src="assets/serve_brands_icon.png" alt="Brands / Sponsors Icon">
-                                <a class="serve_button_links" href="sponsor.html"><p class="serve_buttons">BRANDS / SPONSORS</p></a>
+                                <img class="serve_images" src="assets/serve_brands_icon.png" alt="Brands Icon">
+                                <a class="serve_button_links" href="sponsor.html"><p class="serve_buttons">BRANDS</p></a>
                                 <ul class="serve_list">
                                     <li class="serve_description">We take sponsors!</li>
                                     <li class="serve_description">We take sponsors!</li>
@@ -71,7 +71,7 @@
                             </div>
                             <div class="serve_developers">
                                 <img class="serve_images" src="assets/serve_developers_icon.png" alt="Game Developers Icon">
-                                <a class="serve_button_links" href="partner.html"><p class="serve_buttons">GAME DEVELOPERS</p></a>
+                                <a class="serve_button_links" href="partner.html"><p class="serve_buttons">DEVELOPERS</p></a>
                                 <ul class="serve_list">
                                     <li class="serve_description">We partner up with developers!</li>
                                     <li class="serve_description">We partner up with developers!</li>
@@ -109,7 +109,7 @@
                                     <p class="information_text" id="lead_3d_artist_information">
                                         Lead 3D artist with a Bachelor of Fine Arts degree from the School of Visual Art 3D Animation and VFX program. Proficient in the entire 3D Modeling, 3D Rendering, Animation, and Computer Graphics pipeline. Over 4 years of hands-on experience with industry-standard software.
                                     </p>
-                                    <a href="www.linkedin.com/in/xiangzhang3d"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                    <a href="https://www.linkedin.com/in/xiangzhang3d"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
                                 </div>
                             </div>
                         </div>
