--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p class="scrolling_text">Come visit the Shih Zoo, the home of the best Shih in the world! Come visit the Shih Zoo, the home of the best Shih in the world! </p>
                     <p class="scrolling_text">Come visit the Shih Zoo, the home of the best Shih in the world! Come visit the Shih Zoo, the home of the best Shih in the world! </p>
                 </div>
-                <a href="index.html">
+                <a href="home.html">
                     <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
                 </a>
                 <a href="#">
