Added more formatting

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
         <link rel="icon" href="assets/shih_zoo_icon.png">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="consumer.css">
@@ -32,9 +32,10 @@
         </header>
         <div class="content">
             <div id="blurrable_section">
+                <img id="consumer_background" src="assets/consumer_background.jpg" alt="Shih Zoo Background Image">
                 <div class="scrolling_area">
-                    <p class="scrolling_text">Come visit the Shih Zoo, the home of the best Shih in the world! Come visit the Shih Zoo, the home of the best Shih in the world! </p>
-                    <p class="scrolling_text">Come visit the Shih Zoo, the home of the best Shih in the world! Come visit the Shih Zoo, the home of the best Shih in the world! </p>
+                    <p class="scrolling_text">Come visit the Shih Zoo, the home of the best Shih in the world! Come visit the Shih Zoo, the home of the best Shih in the world!&nbsp;</p>
+                    <p class="scrolling_text">Come visit the Shih Zoo, the home of the best Shih in the world! Come visit the Shih Zoo, the home of the best Shih in the world!&nbsp;</p>
                 </div>
                 <a href="home.html">
                     <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
@@ -42,7 +43,7 @@
                 <a href="#">
                     <img id="shih_zoo_merchandise" src="assets/shih_zoo_merchandise_icon.png" alt="Shih Zoo Merchandise">
                 </a>
-                <img id="shih_tzu" src="assets/shih_tzu.png" alt="Shih Tzu">
+                <img id="shih_tzu" src="assets/shih_tzu.gif" alt="Shih Tzu">
                 <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
                 <button onclick="openDownloadPopup()" id="shih_zoo_download_button">Download</button>
                 <img id="les_dudes_coming_soon" src="assets/les_dudes_coming_soon.png" alt="Les Dudes Coming Soon">
