Fixing careers page

--- a/careers.html
+++ b/careers.html
@@ -37,7 +37,10 @@
                     <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
                 </a>
                 <p id="careers_text">Join us on our shameless journey.</p>
-                <p id="careers_subtext">Click on your future role to explore internship opportunities.</p>
+                <p id="careers_subtext">
+                    Shameless Product Placement is looking for aspiring game creators who are eager to transform the world of interactive entertainment. You'll collaborate with talented co-worker to develop video games that will push the boundaries of innovation. You'll even walk away with an amazing portfolio piece that highlights your skills.
+                </p>
+                <p id="careers_subtitle">Click on your future role to explore our career opportunities.</p>
                 <div class="scrollable_area" id="scrollable_area">
                     <div class="careers_career">
                         <button id="game_designer" class="careers_buttons">Game Designer</button><br>
@@ -175,9 +178,9 @@
                         </magic-slide>
                     </div>
                     <div class="careers_career">
-                        <button id="financier" class="careers_buttons">Financier</button><br>
-                        <magic-slide closed class="careers_extensions" id="financier_extension">
-                            <div class="careers_descriptions" id="financier_description">
+                        <button id="finance" class="careers_buttons">Finance</button><br>
+                        <magic-slide closed class="careers_extensions" id="finance_extension">
+                            <div class="careers_descriptions" id="finance_description">
                                 <div class="careers_text">
                                     <p class="careers_main_text">Drive financial excellence strategically.</p>
                                     <p class="careers_skills_titles">Skills needed:</p>
@@ -193,7 +196,7 @@
                                         <a href="contact.html"><button class="careers_apply_buttons">APPLY</button></a>
                                     </div>
                                 </div>
-                                <img id="financier_image" class="careers_images" src="assets/financier.png" alt="Financier">
+                                <img id="finance_image" class="careers_images" src="assets/finance.png" alt="Financier">
                             </div>
                         </magic-slide>
                     </div>
@@ -218,14 +221,10 @@
                             </div>
                         </magic-slide>
                     </div>
-                    <div class="careers_why">
-                        <p id="careers_why_title">Why intern for us?</p>
-                        <p id="careers_why_text">
-                            Shameless Product Placement is on the hunt for aspiring game creators who are eager to travel to the world of interactive entertainment.
-                            You'll gain hands-on experience as you collaborate to develop a prototype of a video game that pushes the boundaries of innovation.
-                            You'll even walk away with an amazing portfolio piece that highlights your skills.
-                            As a bonus, you'll receive personalized mentorship, a glowing recommendation letter, and huge potential for future employment with us!
-                        </p>
+                    <div class="careers_contact_us">
+                        <p id="careers_contact_us_title">Don't fit into any of these roles?</p>
+                        <p id="careers_contact_us_subtext">We'd still love to hear from you. If you can offer up a skillset that doesn't quite fit these roles, but still offers value, do not hesitate to reach out!</p>
+                        <a href="contact.html"><button id="contact_us_button">Contact Us</button></a>
                     </div>
                 </div>
             </div>
