Added new pictures, added new paragraphs

--- a/home.html
+++ b/home.html
@@ -102,11 +102,23 @@
                             </div>
                         </div>
                         <div class="people">
-                            <img class="people_images" id="lead_3d_artist" src="assets/xiang_zhang.png" alt="Xiang Zhang">
-                            <div class="lead_3d_artist_information">
-                                <p class="name_titles" id="lead_3d_artist_name">Lead 3D Artist Xiang Zhang</p>
+                            <img class="people_images" id="lead_2d_artist_1" src="assets/max_whitmore.png" alt="MW">
+                            <div class="lead_2d_artist_1_information">
+                                <p class="name_titles" id="lead_2d_artist_1_name">Lead 2D Artist MW</p>
                                 <div class="information_section">
-                                    <p class="information_text" id="lead_3d_artist_information">
+                                    <p class="information_text" id="lead_2d_artist_1_information">
+                                        Lead 2D Artist with a degree in game design and development from Georgia State University
+                                    </p>
+                                    <a href="#"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
+                            <img class="people_images" id="lead_3d_artist_1" src="assets/xiang_zhang.png" alt="Xiang Zhang">
+                            <div class="lead_3d_artist_1_information">
+                                <p class="name_titles" id="lead_3d_artist_1_name">Lead 3D Artist Xiang Zhang</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_3d_artist_1_information">
                                         Lead 3D artist with a Bachelor of Fine Arts degree from the School of Visual Art 3D Animation and VFX program. Proficient in the entire 3D Modeling, 3D Rendering, Animation, and Computer Graphics pipeline. Over 4 years of hands-on experience with industry-standard software.
                                     </p>
                                     <a href="https://www.linkedin.com/in/xiangzhang3d"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
@@ -114,14 +126,27 @@
                             </div>
                         </div>
                         <div class="people">
-                            <img class="people_images" id="business_advisor" src="assets/joe_conlan.png" alt="Joe Conlan">
+                            <img class="people_images" id="lead_3d_artist_2" src="assets/yingluo_xu.png" alt="Yingluo Xu">
+                            <div class="lead_3d_artist_2_information">
+                                <p class="name_titles" id="lead_3d_artist_2_name">Lead 3D Artist Yingluo Xu</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_3d_artist_2_information">
+                                        Lead 3D Artist in the Art Department, working as an art generalist. Specializing in both 3D and 2D asset creation for games and web design art.
+                                    </p>
+                                    <a href="https://www.linkedin.com/in/yingluoxu/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                    <a href="https://yingluoxu.com/"><p class="information_social_media"><i class="lni lni-website"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
+                            <img class="people_images" id="business_advisor" src="assets/jc_conlan.png" alt="JC Conlan">
                             <div class="business_advisor_information">
-                                <p class="name_titles" id="business_advisor_name">Business Advisor Joe Conlan</p>
+                                <p class="name_titles" id="business_advisor_name">Business Advisor JC Conlan</p>
                                 <div class="information_section">
                                     <p class="information_text" id="business_advisor_information">
-                                        Insert paragraph written by Joe Conlan here! We will add more staff members above depending on if they want to be on the site or not!
+                                        Insert paragraph written by JC Conlan here! We will add more staff members above depending on if they want to be on the site or not!
                                     </p>
-                                    <a href="#"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                    <a href="https://www.linkedin.com/in/jc-conlan-27913431a/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
                                 </div>
                             </div>
                         </div>
