Added new paragraphs and photos, edits

--- a/home.html
+++ b/home.html
@@ -55,18 +55,18 @@
                                 <img class="serve_images" src="assets/serve_gamers_icon.png" alt="Gamers Icon">
                                 <a class="serve_button_links" href="index.html"><p class="serve_buttons">GAMERS</p></a>
                                 <ul class="serve_list">
-                                    <li class="serve_description">We make great games!</li>
-                                    <li class="serve_description">We make great games!</li>
-                                    <li class="serve_description">We make great games!</li>
+                                    <li class="serve_description">Streamlined game experiences.</li>
+                                    <li class="serve_description">Join immersive adventures!</li>
+                                    <li class="serve_description">We give players incentive!</li>
                                 </ul>
                             </div>
                             <div class="serve_brands">
                                 <img class="serve_images" src="assets/serve_brands_icon.png" alt="Brands Icon">
                                 <a class="serve_button_links" href="sponsor.html"><p class="serve_buttons">BRANDS</p></a>
                                 <ul class="serve_list">
-                                    <li class="serve_description">We take sponsors!</li>
-                                    <li class="serve_description">We take sponsors!</li>
-                                    <li class="serve_description">We take sponsors!</li>
+                                    <li class="serve_description">We take sponsors from brands!</li>
+                                    <li class="serve_description">We will use your ads in-game!</li>
+                                    <li class="serve_description">We will take your feedback!</li>
                                 </ul>
                             </div>
                             <div class="serve_developers">
@@ -74,8 +74,8 @@
                                 <a class="serve_button_links" href="partner.html"><p class="serve_buttons">DEVELOPERS</p></a>
                                 <ul class="serve_list">
                                     <li class="serve_description">We partner up with developers!</li>
-                                    <li class="serve_description">We partner up with developers!</li>
-                                    <li class="serve_description">We partner up with developers!</li>
+                                    <li class="serve_description">We'll market for your game!</li>
+                                    <li class="serve_description">We'll set up sponsors for you!</li>
                                 </ul>
                             </div>
                         </div>
@@ -97,19 +97,31 @@
                                     <p class="information_text" id="founder_information">
                                         Insert paragraph written by Charles J. Conlan here!
                                     </p>
-                                    <a href="#"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                    <a href="https://www.linkedin.com/in/charles-conlan/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
+                            <img class="people_images" id="lead_programmer_1" src="assets/chris_liang.png" alt="Chris Liang">
+                            <div class="lead_programmer_1_information">
+                                <p class="name_titles" id="lead_programmer_1_name">Lead Programmer Chris Liang</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_programmer_1_information">
+                                        Lead Game Programmer and Level Designer with expertise in Unity and Unreal Engine. Responsible for developing core game mechanics, interactive elements, and designing detailed game environments to enhance the overall gaming experience.
+                                    </p>
+                                    <a href="https://www.linkedin.com/in/weixiao-liang/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
                                 </div>
                             </div>
                         </div>
                         <div class="people">
                             <img class="people_images" id="lead_2d_artist_1" src="assets/max_whitmore.png" alt="MW">
                             <div class="lead_2d_artist_1_information">
-                                <p class="name_titles" id="lead_2d_artist_1_name">Lead 2D Artist MW</p>
+                                <p class="name_titles" id="lead_2d_artist_1_name">Lead 2D Artist Max Whitmore</p>
                                 <div class="information_section">
                                     <p class="information_text" id="lead_2d_artist_1_information">
-                                        Lead 2D Artist with a degree in game design and development from Georgia State University
+                                        Lead 2D Artist with a degree in game design and development from Georgia State University.
                                     </p>
-                                    <a href="#"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                    <a href="https://maxtwsm5.wixsite.com/maxwhitmore"><p class="information_social_media"><i class="lni lni-website"></i></p></a>
                                 </div>
                             </div>
                         </div>
@@ -135,6 +147,30 @@
                                     </p>
                                     <a href="https://www.linkedin.com/in/yingluoxu/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
                                     <a href="https://yingluoxu.com/"><p class="information_social_media"><i class="lni lni-website"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
+                            <img class="people_images" id="lead_sound_designer" src="assets/jose_nacul_mora.png" alt="Jose Nacul Mora">
+                            <div class="lead_sound_designer_information">
+                                <p class="name_titles" id="lead_sound_designer_name">Lead Sound Designer Jose Nacul Mora</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_sound_designer_information">
+                                        Lead Sound Designer overseeing the composition of original music and the creation of immersive sound assets. Dedicated to enhancing the project's audio experience with innovative and captivating soundscapes.
+                                    </p>
+                                    <a href="https://www.linkedin.com/in/jose-nacul-mora-37a64926b"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
+                            <img class="people_images" id="lead_web_designer" src="assets/jonah_maligaya.png" alt="Jonah Maligaya">
+                            <div class="lead_web_designer_information">
+                                <p class="name_titles" id="lead_web_designer_name">Lead Web Designer Jonah Maligaya</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_web_designer_information">
+                                        Lead Web Designer graduating 2025 from the New Jersey Institute of Technology with a Bachelor of Science degree in computer science. Committed to overseeing the marketing process and user web experience.
+                                    </p>
+                                    <a href="https://www.linkedin.com/in/jonah-maligaya"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
                                 </div>
                             </div>
                         </div>
