--- a/home.html
+++ b/home.html
@@ -102,9 +102,9 @@
                             </div>
                         </div>
                         <div class="people">
-                            <img class="people_images" id="lead_programmer_1" src="assets/chris_liang.png" alt="Chris Liang">
+                            <img class="people_images" id="lead_programmer_1" src="assets/weixiao_liang.png" alt="Weixiao Liang">
                             <div class="lead_programmer_1_information">
-                                <p class="name_titles" id="lead_programmer_1_name">Lead Programmer Chris Liang</p>
+                                <p class="name_titles" id="lead_programmer_1_name">Lead Programmer Weixiao Liang</p>
                                 <div class="information_section">
                                     <p class="information_text" id="lead_programmer_1_information">
                                         Lead Game Programmer and Level Designer with expertise in Unity and Unreal Engine. Responsible for developing core game mechanics, interactive elements, and designing detailed game environments to enhance the overall gaming experience.
