Added new messages

--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
                                 <p class="name_titles" id="founder_name">Founder Charles J. Conlan</p>
                                 <div class="information_section">
                                     <p class="information_text" id="founder_information">
-                                        Insert paragraph written by Charles J. Conlan here!
+                                        As Founder and Chief Creative Officer of Shameless Product Placement, I started the company with a vision to democratize the gaming industry, making games accessible to everyone regardless of economic capabilities. I am passionate about providing a platform for aspiring game developers to launch commercially viable games to a wide audience, challenging and overthrowing the oligopoly that currently dominates the gaming world. Our innovative approach and dedication to inclusivity are the driving forces behind our mission to transform the gaming landscape.
                                     </p>
                                     <a href="https://www.linkedin.com/in/charles-conlan/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
                                 </div>
@@ -180,7 +180,7 @@
                                 <p class="name_titles" id="business_advisor_name">Business Advisor JC Conlan</p>
                                 <div class="information_section">
                                     <p class="information_text" id="business_advisor_information">
-                                        Insert paragraph written by JC Conlan here! We will add more staff members above depending on if they want to be on the site or not!
+                                        As an advisor, my role is to guide this team of extremely talented individuals in their pursuit of transforming the gaming industry by steering their company towards a path of commercial success through innovation. From facilitating compelling marketing campaigns to optimizing financial strategies, I am dedicated to driving success and ensuring that our games not only entertain but also thrive in a competitive market. With a knack for creative problem-solving and a deep understanding of industry trends, I am committed to helping the company achieve its goals and reach new heights.
                                     </p>
                                     <a href="https://www.linkedin.com/in/jc-conlan-27913431a/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
                                 </div>
