Changes JC asked for

--- a/careers.html
+++ b/careers.html
@@ -38,7 +38,7 @@
                 </a>
                 <p id="careers_text">Join us on our shameless journey.</p>
                 <p id="careers_subtext">
-                    Shameless Product Placement is looking for aspiring game creators who are eager to transform the world of interactive entertainment. You'll collaborate with talented co-worker to develop video games that will push the boundaries of innovation. You'll even walk away with an amazing portfolio piece that highlights your skills.
+                    Shameless Product Placement is looking for aspiring game creators who are eager to transform the world of interactive entertainment. You'll collaborate with talented co-workers to develop video games that will push the boundaries of innovation.
                 </p>
                 <p id="careers_subtitle">Click on your future role to explore our career opportunities.</p>
                 <div class="scrollable_area" id="scrollable_area">
