--- a/home.html
+++ b/home.html
@@ -43,7 +43,6 @@
                 <div class="scrollable_area" id="scrollable_area">
                     <p id="story_title">OUR STORY</p>
                     <div class="description_section">
-                        <p class="section_titles">What is Shameless Product Placement?</p>
                         <div class="description">
                             <p>Video games are stepping up to fill the entertainment void left by uninspired traditional TV programming and repetitive live sports that no longer captivate fans as they once did. People of all ages are seeking more interactive and engaging entertainment experiences. They're tired of simply watching—they want to be part of the story! They want to "be the ball"! They crave alternative storylines, lovable characters, social interactions, and competitive gameplay. Our adventure is just beginning. Join us— the best is yet to come!</p>
                         </div>
@@ -55,18 +54,18 @@
                                 <img class="serve_images" src="assets/serve_gamers_icon.png" alt="Gamers Icon">
                                 <a class="serve_button_links" href="index.html"><p class="serve_buttons">GAMERS</p></a>
                                 <ul class="serve_list">
-                                    <li class="serve_description">Streamlined game experiences.</li>
-                                    <li class="serve_description">Join immersive adventures!</li>
-                                    <li class="serve_description">We give players incentive!</li>
+                                    <li class="serve_description">Play the most Fun, Challenging & Interesting Games</li>
+                                    <li class="serve_description">Enjoy our creative social settings to meet and play with friends</li>
+                                    <li class="serve_description">Compete to be on top of our Leaderboard and win prizes</li>
                                 </ul>
                             </div>
                             <div class="serve_brands">
                                 <img class="serve_images" src="assets/serve_brands_icon.png" alt="Brands Icon">
                                 <a class="serve_button_links" href="sponsor.html"><p class="serve_buttons">BRANDS</p></a>
                                 <ul class="serve_list">
-                                    <li class="serve_description">We take sponsors from brands!</li>
-                                    <li class="serve_description">We will use your ads in-game!</li>
-                                    <li class="serve_description">We will take your feedback!</li>
+                                    <li class="serve_description">Place your Brand and Products in our games</li>
+                                    <li class="serve_description">Get exposure to our vast audiences</li>
+                                    <li class="serve_description">Get player analytics and run marketing campaigns</li>
                                 </ul>
                             </div>
                             <div class="serve_developers">
@@ -190,25 +189,21 @@
                     <div class="game_section">
                         <p class="section_titles">Our games</p>
                         <div class="games">
-                            <div class="games_header">
-                                <div class="games_text">
-                                    <hr>
-                                    <p class="games_titles">Shih Zoo</p>
-                                    <p class="games_descriptions">A compelling story game that allows you to explore the Shih Zoo as a cutesy shih tzu!</p>
-                                    <a href="index.html"><button class="games_buttons" id="shih_zoo_button">VIEW GAME</button></a>
-                                </div>
+                            <hr>
+                            <p class="games_titles">Shih Zoo</p>
+                            <p class="games_descriptions">A compelling story game that allows you to explore the Shih Zoo as a cutesy shih tzu!</p>
+                            <div class="games_clickables">
                                 <img id="shih_zoo_logo" class="games_logos" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
+                                <a href="index.html"><button class="games_buttons" id="shih_zoo_button">VIEW GAME</button></a>
                             </div>
                         </div>
                         <div class="games">
-                            <div class="games_header">
-                                <div class="games_text">
-                                    <hr>
-                                    <p class="games_titles">Les Dudes</p>
-                                    <p class="games_descriptions">Les Dudes is a ___.</p>
-                                    <a href="index.html"><button class="games_buttons" id="les_dudes_button">VIEW GAME</button></a>
-                                </div>
+                            <hr>
+                            <p class="games_titles">Les Dudes</p>
+                            <p class="games_descriptions">Les Dudes is a sports compilation game involving the coolest dudes on planet.</p>
+                            <div class="games_clickables">
                                 <img id="les_dudes_logo" class="games_logos" src="assets/les_dudes_coming_soon.png" alt="Les Dudes Logo">
+                                <a href="index.html"><button class="games_buttons" id="les_dudes_button">VIEW GAME</button></a>
                             </div>
                         </div>
                     </div>
