--- a/sponsor.html
+++ b/sponsor.html
@@ -24,7 +24,7 @@
                     <li><a href="sponsor.html">SPONSOR</a></li><br>
                     <li><a href="investor.html">INVESTOR</a></li><br>
                     <li><a href="partner.html">PARTNER</a></li><br>
-                    <li><a href="#">MERCHANDISE</a></li><br>
+                    <li><a href="merchandise.html">MERCHANDISE</a></li><br>
                     <li><a href="careers.html">CAREERS</a></li><br>
                     <li><a href="contact.html">CONTACT US</a></li><br>
                 </ul>
