--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <div class="people">
-                            <img class="people_images" id="lead_2d_artist_1" src="assets/max_whitmore.png" alt="MW">
+                            <img class="people_images" id="lead_2d_artist_1" src="assets/max_whitmore.png" alt="Max Whitmore">
                             <div class="lead_2d_artist_1_information">
                                 <p class="name_titles" id="lead_2d_artist_1_name">Lead 2D Artist Max Whitmore</p>
                                 <div class="information_section">
@@ -170,6 +170,18 @@
                                         Lead Web Designer graduating 2025 from the New Jersey Institute of Technology with a Bachelor of Science degree in computer science. Committed to overseeing the marketing process and user web experience.
                                     </p>
                                     <a href="https://www.linkedin.com/in/jonah-maligaya"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
+                            <img class="people_images" id="lead_marketer" src="assets/nicole_arot.png" alt="Nicole Arot">
+                            <div class="lead_marketer_information">
+                                <p class="name_titles" id="lead_marketer_name">Lead Marketer Nicole Arot</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_marketer_information">
+                                        Digital Marketer specializing in content creation and sales funnel optimization. Responsible for boosting brand visibility and driving conversions through engaging storytelling and strategic social media campaigns.
+                                    </p>
+                                    <a href="https://www.linkedin.com/in/nicole-arot/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
                                 </div>
                             </div>
                         </div>
