Attempt 9: fixing mobile formatting

--- a/careers.html
+++ b/careers.html
@@ -31,7 +31,7 @@
             </div>
         </header>
         <div class="content">
-            <video src="assets/careers_background.mp4" id="background_video" muted loop autoplay></video>
+            <video src="assets/careers_background.mp4" id="background_video" controls controlsList="nofullscreen" muted loop autoplay></video>
             <div class="careers_details">
                 <a href="home.html">
                     <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
