Attempt 12: fixing mobile formatting

--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
                                 <a class="serve_button_links" href="partner.html"><p class="serve_buttons">DEVELOPERS</p></a>
                                 <ul class="serve_list">
                                     <li class="serve_description">We partner up with developers!</li>
-                                    <li class="serve_description">We'll market for your game!</li>
+                                    <li class="serve_description">We'll market your game and grow your audience!</li>
                                     <li class="serve_description">We'll set up sponsors for you!</li>
                                 </ul>
                             </div>
