--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
                                 <img class="serve_images" src="assets/serve_developers_icon.png" alt="Game Developers Icon">
                                 <a class="serve_button_links" href="partner.html"><p class="serve_buttons">DEVELOPERS</p></a>
                                 <ul class="serve_list">
-                                    <li class="serve_description">We partner up with developers!</li>
+                                    <li class="serve_description">We partner up with game developers!</li>
                                     <li class="serve_description">We'll market your game and grow your audience!</li>
                                     <li class="serve_description">We'll set up sponsors for you!</li>
                                 </ul>
