--- a/careers.html
+++ b/careers.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover">
         <link rel="icon" href="assets/shameless_product_placement_icon.png">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="careers.css">
