--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1 viewport-fit=cover">
         <link rel="icon" href="assets/shih_zoo_icon.png">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="consumer.css">
