--- a/careers.html
+++ b/careers.html
@@ -31,10 +31,8 @@
             </div>
         </header>
         <div class="content">
-            <video id="background_video" playsinline muted loop autoplay>
-                <source src="assets/careers_background.mp4">
-                <img id="background_video_alternative" src="assets/careers_background.png">
-            </video>
+            <video id="background_video" playsinline muted loop autoplay><source src="assets/careers_background.mp4"></video>
+            <img id="background_video_alternative" src="assets/careers_background.png">
             <div class="careers_details">
                 <a href="home.html">
                     <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
